update to manage abbreviation on game urls
